crates/test-files/fixtures/compile_errors/duplicate_field_in_struct.fe
struct MyStruct {
    foo: u8
    foo: u8
}

contract Foo {
    bar: u8
}
